--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -64,10 +64,14 @@ footer {
     }
 
     .social-icon {
-      height: 100%;
+      height: 22px;
       width: 100%;
       fill: $blue;
       transition: all .3s ease-out;
+
+      @include respond-to(medium) {
+        height: 32px;
+      }
     }
   }
 
