--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -55,7 +55,7 @@
       margin-left: 20px;
       padding: 5px;
       font-size: 1rem;
-      background-color: $blue;
+      background-color: $green;
       color: #fff;
     }
 
